2006-11-14  Anders Carlsson  <acarlsson@apple.com>

        Try fixing the build.
        
        * WebCoreSupport/WebEditorClient.mm:
        (-[WebEditorUndoTarget undoEditing:]):
        (-[WebEditorUndoTarget redoEditing:]):

2006-11-14  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Darin.

        Move undo/redo handling into WebEditorClient.
        
        * WebCoreSupport/WebEditorClient.h:
        * WebCoreSupport/WebEditorClient.mm:
        (WebEditorClient::WebEditorClient):
        (WebEditorClient::~WebEditorClient):
        (-[WebEditCommand initWithEditCommand:WebCore::]):
        (-[WebEditCommand dealloc]):
        (-[WebEditCommand finalize]):
        (+[WebEditCommand commandWithEditCommand:]):
        (-[WebEditCommand command]):
        (-[WebEditorUndoTarget undoEditing:]):
        (-[WebEditorUndoTarget redoEditing:]):
        (undoNameForEditAction):
        (WebEditorClient::registerCommandForUndoOrRedo):
        (WebEditorClient::registerCommandForUndo):
        (WebEditorClient::registerCommandForRedo):
        (WebEditorClient::clearUndoRedoOperations):
        (WebEditorClient::canUndo):
        (WebEditorClient::canRedo):
        (WebEditorClient::undo):
        (WebEditorClient::redo):
        * WebCoreSupport/WebFrameBridge.mm:
        * WebKit.xcodeproj/project.pbxproj:

2006-11-14  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Tim H.

        http://bugs.webkit.org/show_bug.cgi?id=3387
        Redundant keydown, keypress, keyup events sent for arrow keys

        Added another layer of ugly hacks around AppKit event dispatching.

        1. For arrow keys, keyDown: is invoked after performKeyEquivalent:, so had to store
        _private->keyDownEvent in both methods, and make it persist after leaving them.

        2. For Esc, AppKit calls performKeyEquivalent: with a fake event of some kind,
        use [NSApp currentEvent] to check for this to prevent it from being passed to  WebCore.
